--- a/devel/ci/Dockerfile-pip
+++ b/devel/ci/Dockerfile-pip
@@ -12,6 +12,7 @@ RUN dnf install -y \
     gcc \
     gcc-c++ \
     graphviz \
+    libpq-devel \
     make \
     poetry \
     postgresql-devel \
