--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -71,7 +71,7 @@ jobs:
       fail-fast: false
       matrix:
         # integration tests are broken on pip atm, so not included in this list.
-        release: [f38,f39,f40,rawhide]
+        release: [f39,f40,rawhide]
 
   unit_tests:
     name: Unit Tests
@@ -95,7 +95,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        release: [f38,f39,f40,pip,rawhide]
+        release: [f39,f40,pip,rawhide]
         module: [bodhi-client, bodhi-messages, bodhi-server]
 
   docs:
@@ -112,7 +112,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        release: [f38,f39,f40,pip,rawhide]
+        release: [f39,f40,pip,rawhide]
 
   rpms:
     name: Build the RPMS
@@ -137,4 +137,4 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        release: [f38,f39,f40,rawhide]
+        release: [f39,f40,rawhide]
