--- a/.mergify.yml
+++ b/.mergify.yml
@@ -4,14 +4,19 @@ queue_rules:
     - status-success=DCO
     - status-success=Pre-commit checks
     - status-success=Diff-cover check
-    - status-success=Integration Tests (f39)
-    - status-success=Unit Tests (f39, bodhi-client)
-    - status-success=Unit Tests (f39, bodhi-messages)
-    - status-success=Unit Tests (f39, bodhi-server)
+    - status-success=Integration Tests (f40)
+    - status-success=Integration Tests (f41)
+    - status-success=Unit Tests (f40, bodhi-client)
+    - status-success=Unit Tests (f40, bodhi-messages)
+    - status-success=Unit Tests (f40, bodhi-server)
+    - status-success=Unit Tests (f41, bodhi-client)
+    - status-success=Unit Tests (f41, bodhi-messages)
+    - status-success=Unit Tests (f41, bodhi-server)
     - status-success=Unit Tests (pip, bodhi-client)
     - status-success=Unit Tests (pip, bodhi-messages)
     - status-success=Unit Tests (pip, bodhi-server)
-    - status-success=Build Documentation (f39)
+    - status-success=Build Documentation (f40)
+    - status-success=Build Documentation (f41)
     - status-success=Build Documentation (pip)
 
 
@@ -30,14 +35,19 @@ pull_request_rules:
   - status-success=DCO
   - status-success=Pre-commit checks
   - status-success=Diff-cover check
-  - status-success=Integration Tests (f39)
-  - status-success=Unit Tests (f39, bodhi-client)
-  - status-success=Unit Tests (f39, bodhi-messages)
-  - status-success=Unit Tests (f39, bodhi-server)
+  - status-success=Integration Tests (f40)
+  - status-success=Integration Tests (f41)
+  - status-success=Unit Tests (f40, bodhi-client)
+  - status-success=Unit Tests (f40, bodhi-messages)
+  - status-success=Unit Tests (f40, bodhi-server)
+  - status-success=Unit Tests (f41, bodhi-client)
+  - status-success=Unit Tests (f41, bodhi-messages)
+  - status-success=Unit Tests (f41, bodhi-server)
   - status-success=Unit Tests (pip, bodhi-client)
   - status-success=Unit Tests (pip, bodhi-messages)
   - status-success=Unit Tests (pip, bodhi-server)
-  - status-success=Build Documentation (f39)
+  - status-success=Build Documentation (f40)
+  - status-success=Build Documentation (f41)
   - status-success=Build Documentation (pip)
 
 - name: backport 8.0
@@ -59,3 +69,13 @@ pull_request_rules:
   - label!=WIP
   - -draft
   - label=8.1-backports
+
+- name: backport 8.2
+  actions:
+    backport:
+      branches:
+      - '8.2'
+  conditions:
+  - label!=WIP
+  - -draft
+  - label=8.2-backports
