Remove f39 from tests matrix
Signed-off-by: Mattia Verga <mattia.verga@tiscali.it>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -73,7 +73,7 @@ jobs:
       fail-fast: false
       matrix:
         # integration tests are broken on pip atm, so not included in this list.
-        release: [f39,f40,f41,rawhide]
+        release: [f40,f41,rawhide]
 
   unit_tests:
     name: Unit Tests
@@ -97,7 +97,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        release: [f39,f40,f41,pip,rawhide]
+        release: [f40,f41,pip,rawhide]
         module: [bodhi-client, bodhi-messages, bodhi-server]
 
   docs:
@@ -114,7 +114,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        release: [f39,f40,f41,pip,rawhide]
+        release: [f40,f41,pip,rawhide]
 
   rpms:
     name: Build the RPMS
@@ -139,4 +139,4 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        release: [f39,f40,f41,rawhide]
+        release: [f40,f41,rawhide]
