--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -34,11 +34,14 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: staging
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
       - name: install Deps with apt
         run: sudo apt-get install krb5-k5tls krb5-user krb5-config libkrb5-dev
 
       - name: Install Deps with PIP
-        run: pip install --break-system-packages click conu pytest pytest-cov munch psycopg2 fedora-messaging koji
+        run: pip install click conu pytest pytest-cov munch psycopg2 fedora-messaging koji
 
       - name: Get Fedora Project IPA CA
         run: sudo curl https://pagure.io/fedora-packager/raw/main/f/ipa_ca/fedoraproject_ipa_ca.crt -o /usr/local/share/ca-certificates/fedoraproject_ipa_ca.crt
