--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,9 +22,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
 
       - name: Install deps
-        run: pip install --break-system-packages click
+        run: pip install click
 
       # we only really need to run the precommit checks for one release,
       # so we just do it for pip
@@ -42,6 +45,9 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
 
       - name: Download artifacts
         uses: actions/download-artifact@v4
@@ -51,7 +57,7 @@ jobs:
         shell: bash
 
       - name: Install deps
-        run: pip install --break-system-packages diff-cover
+        run: pip install diff-cover
 
       - name: Run the diff-cover check
         shell: bash
@@ -63,9 +69,12 @@ jobs:
     timeout-minutes: 30
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
 
       - name: Install deps
-        run: pip3 install --break-system-packages click -r devel/ci/integration/requirements.txt
+        run: pip3 install click -r devel/ci/integration/requirements.txt
 
       - name: Run the integration tests
         run: python3 devel/ci/bodhi-ci integration -r ${{ matrix.release }}
@@ -81,9 +90,12 @@ jobs:
     timeout-minutes: 30
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
 
       - name: Install deps
-        run: pip install --break-system-packages click
+        run: pip install click
 
       - name: Run the unit tests
         run: devel/ci/bodhi-ci unit -r ${{ matrix.release }} -m ${{matrix.module}}
@@ -105,9 +117,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
 
       - name: Install deps
-        run: pip install --break-system-packages click -r docs/requirements.txt
+        run: pip install click -r docs/requirements.txt
 
       - name: Build the docs
         run: devel/ci/bodhi-ci docs -r ${{ matrix.release }}
@@ -121,9 +136,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
 
       - name: Install deps
-        run: pip install --break-system-packages click
+        run: pip install click
 
       - name: Build the rpms
         run: devel/ci/bodhi-ci rpm -r ${{ matrix.release }}
